I have changed colors in the application

--- a/src/Header.css
+++ b/src/Header.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: #f7e0b6;
+    background-color: #b6bcf7;
     padding: 10px 20px;
     display: flex;
     justify-content: space-between;
