--- a/src/Product.css
+++ b/src/Product.css
@@ -6,7 +6,7 @@
     padding: 10px;
   }
   
-  .product button {
+  .product .button {
     background-color: #774c2a;
     color: white;
     padding: 5px 10px;
@@ -14,7 +14,9 @@
     border-radius: 5px;
   }
   
-  .product button:hover {
+  .product .button:hover {
     background-color: #60381f;
   }
-  
+  .product img{
+    max-width: 100px;
+  }
